// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Page Components - Snapshots > PageContainer - Snapshots > matches snapshot for PageContainer with different configurations 1`] = `
<main
  class="w-full mx-auto max-w-[588px] custom-page"
  data-testid="page-container"
>
  <p>
    Main content
  </p>
</main>
`;

exports[`Page Components - Snapshots > PageContainer - Snapshots > matches snapshot for default PageContainer 1`] = `
<div
  class="w-full mx-auto"
  data-testid="page-container"
>
  <div>
    Test content
  </div>
</div>
`;

exports[`Page Components - Snapshots > PageTitle - Snapshots > matches snapshot for PageTitle with different configurations 1`] = `
<h1
  class="font-bold text-foreground text-4xl lg:text-[60px] custom-title"
  data-testid="heading-1"
>
  Medium Title
</h1>
`;

exports[`Page Components - Snapshots > PageTitle - Snapshots > matches snapshot for default PageTitle 1`] = `
<h1
  class="font-bold text-foreground text-5xl lg:text-6xl"
  data-testid="heading-1"
>
  Default Title
</h1>
`;
